--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-openid-connect": "^2.6.0",
+    "express-session": "^1.17.2",
     "mongoose": "^6.2.0",
-    "nodemon": "^2.0.15"
+    "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
