--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-findorcreate": "^3.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
