--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
